--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
               <div class="text-overlay">
                 <h1>Harry S Truman</h1>
               </div>
-              
+              <div class="hero">
+                
+              </div>
                     <video autoplay muted loop preload="auto" id="myVideo">
-                        <source  src="imgs/Rare Harry S. Truman Whistlestop Speech.mp4" type="video/mp4">
+                        <source  src="imgs/speech.mp4" type="video/mp4">
                         Your browser does not support HTML5 video.
                     </video>
         </header>
