--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
                   </div>
                 </div>
               </nav>
-              <div class="text-overlay">
-                <h1>Harry S Truman</h1>
+              <div class="hero-section">
+                <video class="hero-video" autoplay loop muted playsinline>
+                  <source src="imgs/speech.mp4" type="video/mp4">
+                </video>
+                <div class="hero-overlay">
+                  <div class="hero-content">
+                    <h1>Harry S. Truman</h1>
+                    <p>33rd President of the United States</p>
+                    <button class="btn btn-light btn-lg" onclick="showRandomQuote()">Discover Truman's Words</button>
+                  </div>
+                </div>
               </div>
-              <div class="hero">
-                
-              </div>
-                    <video autoplay muted loop preload="auto" id="myVideo">
-                        <source  src="imgs/speech.mp4" type="video/mp4">
-                        Your browser does not support HTML5 video.
-                    </video>
         </header>
         <main>
 <div class="row">
