--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,3 +57,119 @@
           <h4>Early Life & Education</h4>
           <p>Born on May 8, 1884, in Lamar, Missouri, Harry S. Truman came from modest beginnings. The eldest of three children, he was born to John Anderson Truman and Martha Ellen Young Truman. Despite financial difficulties preventing him from completing college, Truman's determination and work ethic would later serve him well in his political career.</p>
         </section>
+
+        <section class="military-service mb-4">
+          <h4>Military Service</h4>
+          <p>Truman served with distinction in World War I as a captain in the U.S. Army, leading an artillery unit in France. This experience shaped his leadership skills and earned him the respect of his fellow soldiers, qualities that would prove invaluable in his future role as Commander in Chief.</p>
+        </section>
+
+        <section class="major-decisions mb-4">
+          <h4>Major Presidential Decisions</h4>
+          <ul class="list-group">
+            <li class="list-group-item">Authorized the use of atomic weapons to end World War II (1945)</li>
+            <li class="list-group-item">Established the Truman Doctrine to contain Soviet expansion (1947)</li>
+            <li class="list-group-item">Implemented the Marshall Plan for European recovery (1948)</li>
+            <li class="list-group-item">Desegregated the U.S. military through Executive Order 9981 (1948)</li>
+            <li class="list-group-item">Led the U.S. response to the Korean War (1950-1953)</li>
+          </ul>
+        </section>
+
+        <section class="legacy mb-4">
+          <h4>Legacy</h4>
+          <p>Truman's presidency marked a pivotal moment in American history. His decisions helped shape the post-war world order, establish America's role as a global superpower, and advance civil rights at home. His famous motto, "The buck stops here," reflected his belief in presidential responsibility and decisive leadership.</p>
+        </section>
+      </div>
+      <div class="col-md-6">
+        <div id="trumanCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="2"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/TRUMAN_58-766-06_%28cropped%29.jpg" class="d-block w-100" alt="Truman Portrait">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Photograph_of_President_Truman_signing_the_congressional_charter_of_the_AMVETS_-_NARA_-_199406.jpg" class="d-block w-100" alt="Truman Signing">
+            </div>
+            <div class="carousel-item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Photograph_of_President_Truman_at_his_desk_in_the_Oval_Office_-_NARA_-_200245.jpg" class="d-block w-100" alt="Truman at Desk">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#trumanCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#trumanCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+
+        <div class="row g-4 mb-4">
+          <div class="col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Presidential Stats</h5>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Term: 1945-1953</li>
+                  <li class="list-group-item">Party: Democratic</li>
+                  <li class="list-group-item">Age at Inauguration: 60</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Key Achievements</h5>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Marshall Plan</li>
+                  <li class="list-group-item">NATO Formation</li>
+                  <li class="list-group-item">Truman Doctrine</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <section class="foreign-policy mb-4">
+          <h4>Foreign Policy Achievements</h4>
+          <ul class="list-group">
+            <li class="list-group-item">Established NATO (1949)</li>
+            <li class="list-group-item">Initiated the Berlin Airlift (1948-1949)</li>
+            <li class="list-group-item">Created the CIA and NSA</li>
+            <li class="list-group-item">Supported the creation of the United Nations</li>
+          </ul>
+        </section>
+
+        <section class="domestic-policy mb-4">
+          <h4>Domestic Accomplishments</h4>
+          <ul class="list-group">
+            <li class="list-group-item">Fair Deal Program</li>
+            <li class="list-group-item">Housing Act of 1949</li>
+            <li class="list-group-item">Social Security Expansion</li>
+            <li class="list-group-item">Civil Rights Executive Order</li>
+          </ul>
+        </section>
+        
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Quick Facts</h5>
+            <ul class="list-unstyled">
+              <li><strong>Born:</strong> May 8, 1884</li>
+              <li><strong>Birthplace:</strong> Lamar, Missouri</li>
+              <li><strong>Political Party:</strong> Democratic</li>
+              <li><strong>Vice President:</strong> Alben W. Barkley</li>
+              <li><strong>First Lady:</strong> Bess Truman</li>
+              <li><strong>Died:</strong> December 26, 1972</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
