--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
               <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/TRUMAN_58-766-06_%28cropped%29.jpg" class="d-block w-100" alt="Truman Portrait">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Photograph_of_President_Truman_signing_the_congressional_charter_of_the_AMVETS_-_NARA_-_199406.jpg" class="d-block w-100" alt="Truman Signing">
+              <img src="imgs/trumansign.png" class="d-block w-100" alt="Truman Signing">
             </div>
             <div class="carousel-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Photograph_of_President_Truman_at_his_desk_in_the_Oval_Office_-_NARA_-_200245.jpg" class="d-block w-100" alt="Truman at Desk">
+              <img src="imgs/trumanatdesk.png" class="d-block w-100" alt="Truman at Desk">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#trumanCarousel" data-bs-slide="prev">
