done with js for now

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="hero-section">
     <video class="hero-video" autoplay loop muted playsinline>
-      <source src="https://storage.googleapis.com/gtv-videos-bucket/sample/ForBiggerJoyrides.mp4" type="video/mp4">
+      <source src="imgs/speech.mp4" type="video/mp4">
     </video>
     <div class="hero-overlay">
       <div class="hero-content">
