--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
           <p>Truman's presidency marked a pivotal moment in American history. His decisions helped shape the post-war world order, establish America's role as a global superpower, and advance civil rights at home. His famous motto, "The buck stops here," reflected his belief in presidential responsibility and decisive leadership.</p>
         </section>
       </div>
-      <div class="col-md-6">
-        <div id="trumanCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+      <div class="col-md-6 rounded">
+        <div id="trumanCarousel" class="carousel slide mb-4 rounded" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#trumanCarousel" data-bs-slide-to="2"></button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/TRUMAN_58-766-06_%28cropped%29.jpg" class="d-block w-100" alt="Truman Portrait">
+          <div class="carousel-inner rounded">
+            <div class="carousel-item active rounded">
+              <img src="imgs/car1.webp" class="d-block w-100 one rounded" alt="Truman Portrait">
             </div>
             <div class="carousel-item">
-              <img src="imgs/trumansign.png" class="d-block w-100" alt="Truman Signing">
+              <img src="imgs/sign.jpg" class="d-block w-100 one rounded" alt="Truman Signing">
             </div>
             <div class="carousel-item">
-              <img src="imgs/trumanatdesk.png" class="d-block w-100" alt="Truman at Desk">
+              <img src="imgs/trumanatdesk.png" class="d-block w-100 one rounded" alt="Truman at Desk">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#trumanCarousel" data-bs-slide="prev">
