--- a/legacy.html
+++ b/legacy.html
@@ -33,7 +33,7 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
-        <h2 class="mb-4">Test Your Knowledge</h2>
+        <h2 class="mt-4 holy">Test Your Knowledge</h2>
         <div id="quiz-container">
           <p id="question" class="lead"></p>
           <div id="options" class="d-grid gap-3"></div>
