--- a/timeline.html
+++ b/timeline.html
@@ -31,14 +31,14 @@
   </nav>
 
   <div class="container-fluid timeline-container">
-    <h2 class="text-center mb-5">Presidential Timeline</h2>
+    <h2 class="text-center mt-5">Presidential Timeline</h2>
     <div class="timeline-events d-none d-md-flex">
       <!-- Timeline items will be populated by JavaScript (horizontal layout) -->
     </div>
     <div class="timeline-events-vertical d-md-none">
       <!-- Timeline items will be populated by JavaScript (vertical layout) -->
     </div>
-    <div class="d-none d-md-flex justify-content-center gap-3 mt-4">
+    <div class="d-none d-md-flex justify-content-center gap-3 mt-4 mb-5">
       <button class="btn btn-primary" onclick="document.querySelector('.timeline-events').scrollLeft -= 300">←</button>
       <button class="btn btn-primary" onclick="document.querySelector('.timeline-events').scrollLeft += 300">→</button>
     </div>
