have to inspect frrrrr

--- a/timeline.html
+++ b/timeline.html
@@ -8,7 +8,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark mb-5">
     <div class="container">
       <a class="navbar-brand" href="index.html">Harry S. Truman</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
   </nav>
 
   <div class="container-fluid timeline-container">
-    <h2 class="text-center mt-5">Presidential Timeline</h2>
+    <h2 class="text-center marg">Presidential Timeline</h2>
     <div class="timeline-events d-none d-md-flex">
       <!-- Timeline items will be populated by JavaScript (horizontal layout) -->
     </div>
