--- a/legacy.html
+++ b/legacy.html
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="legacy.html">Legacy</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="works-cited.html">Works Cited</a>
+          </li>
         </ul>
       </div>
     </div>
