--- a/timeline.html
+++ b/timeline.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Timeline - Harry S. Truman</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
 </head>
@@ -34,7 +34,7 @@
   </nav>
 
   <div class="container-fluid timeline-container">
-    <h2 class="text-center marg">Presidential Timeline</h2>
+    <h2 class="text-center marg mt-5">Presidential Timeline</h2>
     <div class="timeline-events d-none d-md-flex">
       <!-- Timeline items will be populated by JavaScript (horizontal layout) -->
     </div>
