--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="hero-section">
     <video class="hero-video" autoplay loop muted playsinline>
-      <source src="imgs/speech.mp4" type="video/mp4">
+      <source src="imgs/spec.mp4" type="video/mp4">
     </video>
     <div class="hero-overlay">
       <div class="hero-content">
