--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="works-cited.html">Works Cited</a>
           </li>
         </ul>
-      </div>
+      </div> <a></a>
     </div>
   </nav>
 
